--- a/leaderboard.css
+++ b/leaderboard.css
@@ -9,7 +9,8 @@ body{
 }
 table,th,td{
     font-size: 40px;
-    background-color: rgb(175, 204, 232);
+    background-color: rgb(235, 201, 109) ;
+
 
 }
 th,td{
@@ -26,4 +27,19 @@ table{
 }
 #title{
     padding-bottom:40px;
+}
+#h1{
+    width: max-content;
+    background-color: rgb(235 201 109 / 70%) ;
+    text-align: center;
+    font-size: 30px;
+    border: 5px outset black;
+    border-radius:25px;
+    padding:25px;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#div{
+    padding-bottom: 40 px;
 }
