--- a/leaderboard.css
+++ b/leaderboard.css
@@ -43,3 +43,22 @@ table{
 #div{
     padding-bottom: 40 px;
 }
+.center {
+    width: max-content;
+    margin: auto;
+    margin-top: 10px;
+}
+.playAgain {
+    margin: auto;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    border: 5px outset black;
+    border-radius: 25px;
+    padding: 5px;
+    width: max-content;
+    margin-top: 25px;
+}
